# kiosk-case-study

./: .gitignore
senior_frontend/: readme.md
senior_frontend/backend/: .dockerignore  README.md  docker_build.sh  docker_run.sh  dockerfile  pyproject.toml  shell.nix
senior_frontend/backend/backend/: generate_values.py  kiosk.db  main.py
senior_frontend/backend/frontend/: package.json  vite.config.ts
senior_frontend/backend/frontend/src/: App.tsx  style.module.css
senior_frontend/backend/frontend/src/api/: indicators.ts
senior_frontend/backend/frontend/src/components/Card/: Card.tsx
senior_frontend/backend/frontend/src/lib/: types.ts
senior_frontend/frontend/: index.html  package-lock.json
senior_frontend/frontend/src/: App.tsx  style.module.css
senior_frontend/frontend/src/api/: indicators.ts
senior_frontend/frontend/src/components/Card/: Card.tsx
senior_frontend/frontend/src/lib/: types.ts
