[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Valentin Mouret <valentin.mouret@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
